--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Excel file
 skill_test_data.xlsx
+~$skill_test_data.xlsx
 
 # SQLite database file
-pivot_table
-
-~$skill_test_data.xlsx
+pandas_pivot.db
+~pandas_pivot.db
